# tenpad

./: .gitignore  PKGBUILD  README.md  cli.py  pyproject.toml
tests/: test_cli.py
